--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,8 @@
+:root {
+	
+	--cyan: #00dbf9;
+	--blue: #4794EA;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -250,4 +255,58 @@ span{
 }
 .dispUnits{
   background-color: #F5F5DC;
+}
+
+.loadingContainer {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 80vh;
+	
+}
+.loadChild{
+  width: 1vw;
+height: 1vw;
+border-radius: 100%;
+margin: 0.5vw;
+background-image: linear-gradient(145deg, rgba(255,255,255,0.5) 0%, rgba(0,0,0,0) 100%);
+animation: bounce 1.5s 0.5s linear infinite;
+
+}
+.blue1 {
+	background-color: var(--blue);
+}
+
+.cyan1 {
+	background-color: var(--cyan);
+	animation-delay: 0.1s;
+}
+
+.blue2 {
+	background-color: var(--blue);
+	animation-delay: 0.2s;
+}
+
+.cyan2 {
+	background-color: var(--cyan);
+	animation-delay: 0.3s;
+}
+
+@keyframes bounce {
+	0%, 50%, 100% {
+		transform: scale(1);
+		filter: blur(0px);
+	}
+	25% {
+		transform: scale(0.6);
+		filter: blur(3px);
+	}
+	75% {
+		filter: blur(3px);
+		transform: scale(1.4);
+	}
 }
